--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="freelancer">
+<html lang="en" ng-app="dailyTaco">
   <head>
     <meta charset="UTF-8">
     <title>Freelancer</title>
@@ -9,6 +9,9 @@
     <script src="app.js"></script>
     <!-- services here -->
     <!-- controllers here -->
+    <script src="controllers/BannerController.js"></script>
+    <!--<script src="controllers/ShowcaseController.js"></script>-->
+
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
