edits header css.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="dailyTaco">
   <head>
     <meta charset="UTF-8">
-    <title>Freelancer</title>
+    <title>El Taco Diario - Your Daily Taco Lifestyle Guide</title>
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
