add showcaseCtrl and route to showcase to app.js and index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- services here -->
     <!-- controllers here -->
     <script src="controllers/BannerController.js"></script>
-    <!--<script src="controllers/ShowcaseController.js"></script>-->
+    <script src="controllers/ShowcaseController.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
