--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div ui-view="header"></div>
       <div ui-view="body"></div>
       <div ui-view="showcase"></div>
-      <div ui-view="footer"></div>
+      <!-- <div ui-view="footer"></div> -->
     </div>
   </body>
 </html>
