--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>El Taco Diario - Your Daily Taco Lifestyle Guide</title>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="app.js"></script>
     <!-- services here -->
     <!-- controllers here -->
@@ -26,6 +26,7 @@
 
       <div ui-view="header"></div>
       <div ui-view="body"></div>
+      <div ui-view="game1"></div>
       <div ui-view="showcase"></div>
     </div>
       <div ui-view="footer"></div>
