--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <!-- TacoSweeper -->
     <script src="games/Tacosweeper/app.js"></script>
-    <script src="games/Tacosweeper/controllers/TacosweeperController.js"></script>
-    <script src="games/Tacosweeper/directives/myDirectives.js"></script>
-    <link rel="stylesheet" href="games/Tacosweeper/css/styles.css">
+    <script src="controllers/game1/TacosweeperController.js"></script>
+    <script src="directives/game1/myDirectives.js"></script>
+    <link rel="stylesheet" href="css/game1/styles.css">
 
     <!-- <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
     <!-- <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'> -->
