Add css to game1 partial.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- TacoSweeper -->
-    <script src="games/Tacosweeper/app.js"></script>
+    <!-- // <script src="games/Tacosweeper/app.js"></script> -->
     <script src="controllers/game1/TacosweeperController.js"></script>
     <script src="directives/game1/myDirectives.js"></script>
     <link rel="stylesheet" href="css/game1/styles.css">
