added correct route to mine sweeper. Created game1 functionality.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- controllers here -->
     <script src="controllers/BannerController.js"></script>
     <script src="controllers/ShowcaseController.js"></script>
+    <script src="services/GamesFactory.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -32,7 +33,7 @@
 
       <div ui-view="header"></div>
       <div ui-view="body"></div>
-      <div ui-view="game-1"></div>
+      <div ui-view="game1"></div>
       <div ui-view="showcase"></div>
     </div>
 
