--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <script src="directives/game1/myDirectives.js"></script>
     <link rel="stylesheet" href="css/game1/styles.css">
 
+    <!-- Taco Wars -->
+
+    <script src="controllers/game2/GamesController.js"></script>
+    <script src="controllers/game2/TacoController.js"></script>
+    <script src="services/game2/TacosFactory.js"></script>
+    <script src="services/game2/UtilitiesFactory.js"></script>
+    <script src="directives/game2/myDirectives.js"></script>
+    <link rel="stylesheet" href="css/game2/mystyles.css">
+
     <!-- <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
     <!-- <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'> -->
     <link href='https://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
@@ -33,7 +42,7 @@
 
       <div ui-view="header"></div>
       <div ui-view="body"></div>
-      <div ui-view="game1"></div>
+      <!-- <div ui-view="game1"></div> -->
       <div ui-view="showcase"></div>
     </div>
 
