Add dude n dino, fix images, add links

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <script src="directives/game2/myDirectives.js"></script>
     <link rel="stylesheet" href="css/game2/mystyles.css">
 
+    <!-- Dude n Dino -->
+    <script type="text/javascript" src="lib/phaser.min.js"></script>
+    <!-- // <script src="lib/main.js"></script> -->
+
     <!-- <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
     <!-- <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'> -->
     <link href='https://fonts.googleapis.com/css?family=Allerta+Stencil' rel='stylesheet' type='text/css'>
